--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,15 @@ section {
     font-family: "IBM Plex Sans";
 }
 
+.text-gradient-blue {
+    @apply bg-gradient-to-r;
+    @apply from-[#0085FF];
+    @apply to-[#69B4FF];
+    @apply inline-block;
+    @apply text-transparent;
+    @apply bg-clip-text;
+}
+
 @media (max-width: 1280px) {
     section {
         @apply px-32 !important;
@@ -25,11 +34,48 @@ section {
     }
 }
 
-.text-gradient-blue {
-    @apply bg-gradient-to-r;
-    @apply from-[#0085FF];
-    @apply to-[#69B4FF];
-    @apply inline-block;
-    @apply text-transparent;
-    @apply bg-clip-text;
-}
+.sphere-animation {
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background-color: white; /* Cambia según el tema que quieras sacar */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    animation: grow 0.6s ease-out forwards;
+  }
+  
+  @keyframes grow {
+    0% {
+      width: 0;
+      height: 0;
+      opacity: 0.8;
+    }
+    100% {
+      width: 300vw;
+      height: 300vw;
+      opacity: 0;
+    }
+  }
+  
+  
+  #toggle-theme {
+    position: absolute; 
+    top: 16px;
+    right: 16px;
+    padding: 8px 12px;
+    font-size: 1rem;
+    border: none;
+    border-radius: 4px;
+    z-index: 1050;
+    cursor: pointer;
+  }
+
+  @media (max-width: 768px) {
+    #toggle-theme {
+      font-size: 0.875rem;
+      padding: 6px 10px;
+    }
+  }
