--- a/src/index.css
+++ b/src/index.css
@@ -1,54 +1,9 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Hubballi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.sphere-animation {
-    width: 0;
-    height: 0;
-    border-radius: 50%;
-    background-color: white; /* Cambia según el tema que quieras sacar */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1000;
-    animation: grow 0.6s ease-out forwards;
-  }
-  
-  @keyframes grow {
-    0% {
-      width: 0;
-      height: 0;
-      opacity: 0.8;
-    }
-    100% {
-      width: 300vw;
-      height: 300vw;
-      opacity: 0;
-    }
-  }
-  
-  
-  #toggle {
-    position: absolute; 
-    top: 16px;
-    right: 16px;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  #toggle-lang {
-    position: absolute; 
-    top: 32px;
-    right: 16px;
-    padding: 8px 12px;
-    border: none;
-    cursor: pointer;
-  }
-
-  @media (max-width: 768px) {
-    #toggle {
-      font-size: 0.875rem;
-      padding: 6px 10px;
-    }
-  }
+@theme {
+  --font-poppins: 'Poppins', sans-serif;
+  --font-hubballi: 'Hubballi';
+  --shadow-icon: 0 0 10px 0.2px rgba(204, 204, 204, 0.5);
+}
