--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,41 @@
   --color-button-gradient-to: #C4C4C4;
   --color-button-gradient-to-hover: #C4C4C4;
 }
+
+body {
+  background-color: #000;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  height: 695px !important;
+  border-radius: 10px !important;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .swiper {
+    padding: 10px !important;
+  }
+  .swiper-slide {
+    height: 395px !important;
+  }
+}
